--- a/views/layouts/admin-header.ejs
+++ b/views/layouts/admin-header.ejs
@@ -41,7 +41,7 @@
                 alt="DXpress Logo"
                 class="logo-img"
                 width="40"
-                height="40"
+                height="30"2
               />
               <span class="logo-text ms-2">DXpress</span>
             </div>
