--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -23,7 +23,12 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="/">
-          <img src="/assets/images/logo.png" alt="DXPress Logo" height="40" />
+          <img
+            src="/assets/images/logo.png"
+            alt="DXPress Logo"
+            height="40"
+            style="width: 135px"
+          />
         </a>
         <button
           class="navbar-toggler"
