--- a/views/layouts/nav-other.ejs
+++ b/views/layouts/nav-other.ejs
@@ -149,6 +149,7 @@
               src="/assets/images/logo/logo.png"
               alt="Logo"
               class="max-w-200-px"
+              style="width: 135px;"
             />
           </a>
         </div>
