--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -135,12 +135,12 @@
       <div class="login-box">
         <div class="login-header">
           <img
-            src="/assets/images/logo/logo2.png"
+            src="/assets/images/logo/logo5.png"
             alt="DXpress Admin"
             class="login-logo"
             onerror="this.src='/assets/images/logo/logo.png';"
           />
-          <h1><span class="highlight">A</span>dmin Login</h1>
+          <h1><span class="highlight">D</span>Xpress Admin Access</h1>
         </div>
 
         <% if (errorMessage) { %>
